파싱 과정 save_session으로 이동

--- a/views/ringo/index.html
+++ b/views/ringo/index.html
@@ -135,7 +135,7 @@
                                 {{'logout'|load_lang}}
                             </a>
                         {% else %}
-                            <a href="/login">
+                            <a id="login_button" href="/login">
                                 <span class="iconify" data-icon="ic:baseline-login" data-inline="true"></span>
                                 {{'login'|load_lang}}
                             </a>
